--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-    <h2>Fight!</h2>
-
-    <div id="heroContainer">
-        <h6>Heroe</h6>
-        <div class="healthBar" id="heroeHealthBar"></div>
-    </div>
-    <div id="enemyContainer">
-        <h6>Limo</h6>
-        <div class="healthBar" id="limoHealthBar"></div>
+    <div class="fightContainer">
+        <h2>Fight!</h2>
+        <div id="heroContainer">
+            <h6>Heroe</h6>
+            <div class="healthBar" id="heroeHealthBar"></div>
+        </div>
+        <div id="enemyContainer">
+            <h6>Limo</h6>
+            <div class="healthBar" id="limoHealthBar"></div>
+        </div>
     </div>
 
 
