--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <h2>Fight!</h2>
         <div id="heroContainer">
             <h6>Heroe</h6>
+            <h6 id="heroeHealth"></h6>
             <div class="healthBar" id="heroeHealthBar"></div>
         </div>
         <div id="enemyContainer">
             <h6>Limo</h6>
+            <h6 id="limoHealth"></h6>
             <div class="healthBar" id="limoHealthBar"></div>
         </div>
     </div>
