--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="fightContainer">
         <h2>Fight!</h2>
+        <canvas id="canvas"></canvas>
         <div id="heroContainer">
             <h6>Heroe</h6>
             <h6 id="heroeHealth"></h6>
